# soem-perf-measure

./: CMakeLists.txt  README.md  gdb-sudo.sh
osal/linux/: osal.c
oshw/linux/: nicdrv.c  nicdrv.h  perf_measure.h  r8169_dma.c  r8169_uio.c  r8169_uio.h
soem/: ethercatmain.c
test/linux/eepromtool/: Makefile  cmake_install.cmake
test/linux/simple_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cycle_test.c  cycle_test_2  cycle_test_2.c  latency_test.c  simple_test.c  test.c
test/linux/slaveinfo/: Makefile  cmake_install.cmake
